--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Apen Race</title>
-    <link rel="stylesheet" type="text/css" href="public\style.css" />
-    <link rel="stylesheet" type="text/css" href="src\client\style.css" />
-    <link rel="icon" type="image/x-icon" href="public\images\favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="/public/style.css" />
+    <link rel="stylesheet" type="text/css" href="/src/client/style.css" />
+    <link rel="icon" type="image/x-icon" href="public/images/favicon.ico" />
   </head>
   <body>
     <div class="login">
