progress GUI made.

--- a/src/client/game.html
+++ b/src/client/game.html
@@ -48,6 +48,17 @@
     </div>
     <div id="questionDisplay"></div>
 
+    <div id="gameScoreBoard">
+      <div id="personal">
+        <span id="usernameIndex"></span>
+        <span id="usernameScore"></span>
+      </div>
+      <div id="others">
+        <div id="multiUsernameIndex"></div>
+        <div id="multiUsernameScore"></div>
+      </div>
+    </div>
+
     <!-- finished game -->
     <div id="finishedGamePopup">
       <div id="endDisplay">Je hebt het einde bereikt!! <br> Ga terug naar de home pagina om opnieuw te spelen.</div>
