--- a/src/client/home.html
+++ b/src/client/home.html
@@ -161,9 +161,10 @@
             >Moeilijkheidsgraad:</label
           >
           <select id="difficultySelector">
-            <option id="easy" value="easy">Makkelijk</option>
-            <option id="medium" value="medium">Gemiddeld</option>
-            <option id="hard" value="hard">Moeilijk</option>
+            <option id="niv1" value="niv1">Niveau 1</option>
+            <option id="niv2" value="niv2">Niveau 2</option>
+            <option id="niv3" value="niv3">Niveau 3</option>
+            <option id="niv4" value="niv4">Niveau 4</option>
           </select>
         </div>
         <button id="settingsCloseButton"><i class="fa-solid fa-x"></i></button>
