--- a/src/client/game.html
+++ b/src/client/game.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title id="pageTitle">Apen Race</title>
-    <link rel="stylesheet" type="text/css" href="public\style.css" />
+    <link rel="stylesheet" type="text/css" href="/public\style.css" />
     <link rel="stylesheet" type="text/css" href="/src/client/style.css" />
     <link rel="icon" type="image/x-icon" href="public\images\favicon.ico" />
     <script
