--- a/src/client/home.html
+++ b/src/client/home.html
@@ -3,8 +3,8 @@
   <head>
     <!-- <audio src="/public/sounds/homeMenu.wav" autoplay loop ></audio> -->
     <title id="pageTitle">Apen Race</title>
-    <link rel="stylesheet" type="text/css" href="public\style.css" />
-    <link rel="stylesheet" type="text/css" href="src\client\style.css" />
+    <link rel="stylesheet" type="text/css" href="/public\style.css" />
+    <link rel="stylesheet" type="text/css" href="/src\client\style.css" />
     <link rel="icon" type="image/x-icon" href="public\images\favicon.ico" />
     <script
       src="https://kit.fontawesome.com/f9b6a0cf1e.js"
