--- a/src/client/index.html
+++ b/src/client/index.html
@@ -38,6 +38,9 @@
           <p class="form__text">
             <a class="form__link" href="./" id="linkCreateAccount">Don't have an account? Create account</a>
           </p>
+          <p class="form__text">
+            <a class="form__link" href="./" id="linkCreateAccountDocent">Teacher or Admin? Login!</a>
+          </p>
         </form>
         <form class="form form--hidden" id="createAccount">
           <h1 class="form__title">Create Account</h1>
@@ -89,6 +92,83 @@
         </form>
       </div>
     </div>
+    <div id="keuzemenuDocenten" class="kmdClass form--hidden">
+      <p class="kmd_text">Als wie wilt u inloggen?</p>
+      <div id="kmd_DocentInloggen" class="kmd_hover">
+        <p class="kmd_textDocent">Docent</p>
+      </div>
+      <div id="kmd_AdminInloggen" class="kmd_hover">
+        <p class="kmd_textAdmin">Admin</p>
+      </div>
+      <p class="kmd_linkGoBack">
+        <a class="form__link" href="./" id="linkGoBack">Go Back!</a>
+      </p>
+    </div>
+
+    <!-- ============================= Docent inlogpage ============================= -->
+    <form class="form form--hidden" method="POST" id="loginDocent">
+      <h1 class="form__title">Docent Login</h1>
+      <div class="form__message form__message--error"></div>
+      <div class="form__input-group">
+        <input
+          name="usernameDocent"
+          type="text"
+          class="form__input"
+          autofocus
+          placeholder="Username"
+        />
+        <div class="form__input-error-message"></div>
+      </div>
+      <div class="form__input-group">
+        <input
+          name="password"
+          type="password"
+          class="form__input"
+          placeholder="Password"
+        />
+        <div class="form__input-error-message"></div>
+      </div>
+      <button class="form__button" type="submit">Continue</button>
+      <p class="form__text">
+        <a href="#" class="form__link">Forgot your password?</a>
+      </p>
+      <p class="form__text">
+      <a class="form__link" href="./" id="linkGoBack">Go Back!</a>
+      </p>
+    </form>
+
+<!--============================= Admin inlogpage =============================-->
+      <form class="form form--hidden" method="POST" id="loginAdmin">
+        <h1 class="form__title">Admin Login</h1>
+        <div class="form__message form__message--error"></div>
+        <div class="form__input-group">
+          <input
+            name="username"
+            type="text"
+            class="form__input"
+            autofocus
+            placeholder="Username"
+          />
+          <div class="form__input-error-message"></div>
+        </div>
+        <div class="form__input-group">
+          <input
+            name="password"
+            type="password"
+            class="form__input"
+            placeholder="Password"
+          />
+          <div class="form__input-error-message"></div>
+        </div>
+        <button class="form__button" type="submit">Continue</button>
+        <p class="form__text">
+          <a href="#" class="form__link">Forgot your password?</a>
+        </p>
+        <p class="form__text">
+        <a class="form__link" href="./" id="linkGoBack">Go Back!</a>
+        </p>
+      </form>
     <script src="js/main.js"></script>
+    <!-- <script src="keuzemenu.js"></script> -->
   </body>
 </html>
