--- a/src/client/index.html
+++ b/src/client/index.html
@@ -46,19 +46,27 @@
             <input
               type="text"
               class="form__input"
-              id="signupUsername"
-              name="username"
+              id="fullname"
+              name="fullname"
               autofocus
-              placeholder="Username"
+              placeholder="Volledige naam"
             />
             <div class="form__input-error-message"></div>
             <input
-            type="text"
+              type="text"
+              class="form__input"
+              id="signupUsername"
+              name="username"
+              placeholder="Gebruikersnaam"
+            />
+            <div class="form__input-error-message"></div>
+            <input
+            type="email"
             class="form__input"
             id="signupEmail"
             name="email"
             autofocus
-            placeholder="Email Address"
+            placeholder="Email Adres"
           />
           <div class="form__input-error-message"></div>
           </div>
@@ -69,7 +77,7 @@
               id="signupPassword"
               name="password"
               autofocus
-              placeholder="Password"
+              placeholder="Wachtwoord"
             />
             <div class="form__input-error-message"></div>
             <div class="form__input-group">
@@ -78,7 +86,7 @@
                 class="form__input"
                 id="confirmPassword"
                 autofocus
-                placeholder="Confirm password"
+                placeholder="Bevestig Wachtwoord"
               />
               <div class="form__input-error-message"></div>
           </div>
